--- a/contacto.html
+++ b/contacto.html
@@ -12,8 +12,8 @@
     <meta property="og:type" content="article">
     <meta property="og:title" content="Contactate con ruh esencia">
     <meta property="og:description" content="Dejanos tu consulta y sigamos conectados en nuestras redes Sociales">
-    <!-- <meta property="og:url" content="url"> pendiente hasta subir  -->
-    <meta property="og:image" content="https://ruh-esencia.000webhostapp.com/logos/logo-ovalado.png">
+    <meta property="og:url" content="https://ruh-esencia.000webhostapp.com/contacto.html">
+    <meta property="og:image" content="https://ruh-esencia.000webhostapp.com/img/prod-velas.png">
 
     <link rel="shortcut icon" href="logos/favicon.png" type="image/x-icon">
 
@@ -212,7 +212,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
         integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous">
     </script>
-<div  class="disclaimer"></div>
+    <div class="disclaimer"></div>
 </body>
 
 </html>
