--- a/mayorista.html
+++ b/mayorista.html
@@ -14,7 +14,7 @@
     <meta property="og:title" content="Venta mayorista de Velas de soja 100% cera vegetal">
     <meta property="og:description"
         content="Podes elegir modelo del envase, decoración y etiqueta, te proponemos opciones de diseño o concretamos tu idea">
-    <!-- <meta property="og:url" content="url"> pendiente hasta subir  -->
+    <meta property="og:url" content="https://ruh-esencia.000webhostapp.com/mayorista.html">
     <meta property="og:image" content="https://ruh-esencia.000webhostapp.com/img/home3.png">
 
     <link rel="shortcut icon" href="logos/favicon.png" type="image/x-icon">
