--- a/productos.html
+++ b/productos.html
@@ -13,8 +13,8 @@
     <meta property="og:title" content="Velas aromaticas, sahumos y defumadores">
     <meta property="og:description"
         content="Velas aromaticas 100% cera vegetal, variedad de sahumos y defumadores con distintas esencias, aromas y decoracion">
-    <!-- <meta property="og:url" content="url"> pendiente hasta subir  -->
-    <meta property="og:image" content="https://ruh-esencia.000webhostapp.com/img/prod-velas.png">
+   <meta property="og:url" content="https://ruh-esencia.000webhostapp.com/productos.html"> 
+    <meta property="og:image" content="https://ruh-esencia.000webhostapp.com/img/prod-s-natural.png">
 
     <link rel="shortcut icon" href="logos/favicon.png" type="image/x-icon">
 
