--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta property="og:title" content="Esencias y aromas naturales">
     <meta property="og:description"
         content="Velas aromaticas 100% cera vegetal y variedad de sahumos con distintas esencias">
-    <!-- <meta property="og:url" content="url"> pendiente hasta subir  -->
+    <meta property="og:url" content="https://ruh-esencia.000webhostapp.com/index.html">
     <meta property="og:image" content="https://ruh-esencia.000webhostapp.com/logos/logo-ovalado.png">
 
     <link rel="shortcut icon" href="logos/favicon.png" type="image/x-icon">
@@ -21,7 +21,6 @@
     <!-- enlance bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-
 
     <!-- link to the CDN -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@splidejs/splide@1.3.3/dist/css/splide.min.css">
@@ -290,7 +289,7 @@
     <script>
         new Splide('.splide').mount();
     </script>
-       <div  class="disclaimer"></div>
+    <div class="disclaimer"></div>
 
 </body>
 
