--- a/info.html
+++ b/info.html
@@ -13,8 +13,8 @@
     <meta property="og:title" content="Curiosidades e informacion interesante">
     <meta property="og:description"
         content="Te contamos un poco mas sobre nuestros productos y te compartimos nuestra pasion por la naturaleza y tips para cuidarla">
-    <!-- <meta property="og:url" content="url"> pendiente hasta subir  -->
-    <meta property="og:image" content="https://ruh-esencia.000webhostapp.com/img/cuidado-ambiental.jpeg">
+    <meta property="og:url" content="https://ruh-esencia.000webhostapp.com/info.html">
+    <meta property="og:image" content="https://ruh-esencia.000webhostapp.com/img/prod-sahumo-1.png">
 
     <link rel="shortcut icon" href="logos/favicon.png" type="image/x-icon">
 
@@ -423,7 +423,7 @@
         integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous">
     </script>
 
-<div class="disclaimer"></div>
+    <div class="disclaimer"></div>
 </body>
 
 </html>
