--- a/nosotras.html
+++ b/nosotras.html
@@ -12,7 +12,7 @@
     <meta property="og:type" content="article">
     <meta property="og:title" content="Nosotras, ¿Quienes somos?">
     <meta property="og:description" content="Nosotras, Jose y Mica, apacionadas por la naturaleza y las esencias">
-    <!-- <meta property="og:url" content="url"> pendiente hasta subir  -->
+    <meta property="og:url" content="https://ruh-esencia.000webhostapp.com/nosotras.html">
     <meta property="og:image" content="https://ruh-esencia.000webhostapp.com/img/nosotras.png">
 
     <link rel="shortcut icon" href="logos/favicon.png" type="image/x-icon">
@@ -192,7 +192,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
         integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous">
     </script>
-<div  class="disclaimer"></div>
+    <div class="disclaimer"></div>
 </body>
 
 </html>
