--- a/contacto.html
+++ b/contacto.html
@@ -11,7 +11,7 @@
         content="dejanos tu consulta, contactanos, redes sociales, ruh.esencia, instagram, facebook, Productos naturales, velas de sojas, 100% cera vegetal,  venta de shaumos y shaumerios, esencias, palo santo, limpieza de energia, yoga, medio ambiente, tips para cuidado ambiental">
     <meta property="og:type" content="article">
     <meta property="og:title" content="Contactate con ruh esencia">
-    <meta property="og:description" content="Dejanos tu consulta y sigamos conectados en nuestras redes Sociales">
+    <meta property="og:description" content="Dejanos tu consulta y sigamos conectados por nuestras Redes Sociales">
     <meta property="og:url" content="https://ruh-esencia.000webhostapp.com/contacto.html">
     <meta property="og:image" content="https://ruh-esencia.000webhostapp.com/img/prod-velas.png">
 
