--- a/info.html
+++ b/info.html
@@ -189,7 +189,7 @@
                                     <p>Conoce nuestra linea de <a href="productos.html#sahumerios">Sahumerios Palo
                                             Santo</a></p>
                                 </article>
-                                <img src="img/palo-santo.png" alt="Palo Santo" class="main_img">
+                                <img src="img/palo-santo.jpg" alt="Palo Santo" class="main_img">
                             </section>
                         </div>
                     </div>
@@ -206,7 +206,7 @@
                         aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
                         <div class="accordion-body">
                             <section class="info1">
-                                <img src="img/velas-soja.png" alt="Velas de Soja" class="main_img">
+                                <img src="img/velas-soja.jpg" alt="Velas de Soja" class="main_img">
                                 <article class="main_art">
                                     <h4 class="main_art_tit">Velas de soja Vs Parafina.</h4>
                                     <h5>¿Conoces sus diferencias?</h5>
@@ -266,7 +266,7 @@
                             <div class="card mb-3" style="max-width: 1140px; margin: auto;">
                                 <div class="row g-0 justify-content-center">
                                     <div class="col-md-4 col-sm-8">
-                                        <img src="img/grounding.png" class="img-fluid rounded-start" alt="Grounding">
+                                        <img src="img/grounding.jpg" class="img-fluid rounded-start" alt="Grounding">
                                     </div>
                                     <div class="col-md-8 col-sm-10">
                                         <div class="card-body">
