--- a/nosotras.html
+++ b/nosotras.html
@@ -13,7 +13,7 @@
     <meta property="og:title" content="Nosotras, ¿Quienes somos?">
     <meta property="og:description" content="Nosotras, Jose y Mica, apacionadas por la naturaleza y las esencias">
     <meta property="og:url" content="https://ruh-esencia.000webhostapp.com/nosotras.html">
-    <meta property="og:image" content="https://ruh-esencia.000webhostapp.com/img/nosotras.png">
+    <meta property="og:image" content="https://ruh-esencia.000webhostapp.com/img/nosotras.jpg">
 
     <link rel="shortcut icon" href="logos/favicon.png" type="image/x-icon">
 
@@ -121,7 +121,7 @@
                 </article>
             </div>
             <div class="col-lg-6 col-md-8 descripcion-nos">
-                <img src="img/mica.png" alt="Micaela">
+                <img src="img/mica.jpg" alt="Micaela">
                 <article class="nos_text">
                     <p>Hola, soy Mica, arquitecta y una de las fundadoras de RUH, pero además,
                         soy profe de yoga, mi verdadera pasión.
