--- a/productos.html
+++ b/productos.html
@@ -10,7 +10,7 @@
     <meta name="keywords"
         content="Productos naturales, velas de sojas, 100% cera vegetal, artesanal, venta de shaumos y shaumerios, esencias, palo santo.">
     <meta property="og:type" content="article">
-    <meta property="og:title" content="Velas aromaticas, sahumos y defumadores">
+    <meta property="og:title" content="Venta de velas aromaticas,sahumos y defumadores">
     <meta property="og:description"
         content="Velas aromaticas 100% cera vegetal, variedad de sahumos y defumadores con distintas esencias, aromas y decoracion">
    <meta property="og:url" content="https://ruh-esencia.000webhostapp.com/productos.html"> 
