--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="img/carousel-2.png" class="d-block w-100" alt="Portada sahumadores" sizes="auto">
+                <img src="img/carousel-2.jpg" class="d-block w-100" alt="Portada sahumadores" sizes="auto">
                 <div class="carousel-caption d-none d-md-block">
                     <p class="text-carousel"> Conectar con la naturaleza<br> sahumando.</p>
                 </div>
@@ -220,7 +220,7 @@
         <section class="container">
             <article class="row justify-content-center">
                 <div class="col-lg-7 col-md-8 col-sm-12 align-self-center">
-                    <img class="img_nosotras" src="img/nosotras.png" alt="Nosotras">
+                    <img class="img_nosotras" src="img/nosotras.jpg" alt="Nosotras">
                 </div>
                 <div class="col-lg-4 col-md-6 home-nosotras align-self-center">
                     <h3>Nosotras</h3>
@@ -255,8 +255,7 @@
                             <img src="logos/Face-logo.png" alt="Facebook" class="redes-img"></a>
                     </div>
                     <div class="logo-f">
-                        <img src="logos/logo-footer.png" alt="logo">
-                        <p class="logo-tit-f">Ruh - Esencia</p>
+                        <p class="logo-tit-f">| Ruh - Esencia |</p>
                     </div>
                 </section>
 
