--- a/mayorista.html
+++ b/mayorista.html
@@ -92,7 +92,7 @@
     <section class="container-img">
         <div class="box-img">
             <figure>
-                <img src="img/evento1.png" alt="Evento, Casamiento">
+                <img src="img/evento1.jpg" alt="Evento, Casamiento">
             </figure>
         </div>
         <div class="box-img evento-descripcion">
@@ -106,7 +106,7 @@
         </div>
         <div class="box-img">
             <figure>
-                <img src="img/evento2png.png" alt="Souvenir de evento">
+                <img src="img/evento2.png" alt="Souvenir de evento">
             </figure>
         </div>
         <div class="box-img">
@@ -116,12 +116,12 @@
         </div>
         <div class="box-img">
             <figure>
-                <img src="img/Evento4.png" alt="Mesa principal novios">
+                <img src="img/Evento4.jpg" alt="Mesa principal novios">
             </figure>
         </div>
         <div class="box-img">
             <figure>
-                <img src="img/evento5.png" alt="Mesa casamiento">
+                <img src="img/evento5.jpg" alt="Mesa casamiento">
             </figure>
         </div>
         <div class="box-img">
