--- a/index.html
+++ b/index.html
@@ -223,8 +223,8 @@
                     <img class="img_nosotras" src="img/nosotras.jpg" alt="Nosotras">
                 </div>
                 <div class="col-lg-4 col-md-6 home-nosotras align-self-center">
-                    <h3>Nosotras</h3>
-                    <p>Te contamos quien esta detras de RUH, y te compartimos un poco de nuestros intereses.</p>
+                    <h3>¿Quienes Somos?</h3>
+                    <p>Te contamos un poco de nosotras y del significado de RUH.</p>
                     <div class="btn nos"><a href="nosotras.html">CONOCENOS</a></div>
                 </div>
             </article>
@@ -261,7 +261,7 @@
 
                 <section class="foot_contacto">
                     <div class="foot_contacto_tit">Contactanos</div>
-                    <div>
+                    <div class="box-contacto">
                         <article class="foot_contacto_iconos">
                             <img src="logos/wa-icono.svg" alt="wa" class="icono">
                             <h5>+54 9 3512297942</h5>
