--- a/contacto.html
+++ b/contacto.html
@@ -181,14 +181,13 @@
                         <img src="logos/Face-logo.png" alt="Facebook" class="redes-img"></a>
                 </div>
                 <div class="logo-f">
-                    <img src="logos/logo-footer.png" alt="logo">
-                    <p class="logo-tit-f">Ruh - Esencia</p>
+                    <p class="logo-tit-f">| Ruh - Esencia |</p>
                 </div>
             </section>
 
             <section class="foot_contacto">
                 <div class="foot_contacto_tit">Contactanos</div>
-                <div>
+                <div class="box-contacto">
                     <article class="foot_contacto_iconos">
                         <img src="logos/wa-icono.svg" alt="wa" class="icono">
                         <h5>+54 9 3512297942</h5>
