--- a/mayorista.html
+++ b/mayorista.html
@@ -156,14 +156,13 @@
                         <img src="logos/Face-logo.png" alt="Facebook" class="redes-img"></a>
                 </div>
                 <div class="logo-f">
-                    <img src="logos/logo-footer.png" alt="logo">
-                    <p class="logo-tit-f">Ruh - Esencia</p>
+                    <p class="logo-tit-f">| Ruh - Esencia |</p>
                 </div>
             </section>
 
             <section class="foot_contacto">
                 <div class="foot_contacto_tit">Contactanos</div>
-                <div>
+                <div class="box-contacto">
                     <article class="foot_contacto_iconos">
                         <img src="logos/wa-icono.svg" alt="wa" class="icono">
                         <h5>+54 9 3512297942</h5>
@@ -187,7 +186,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
         integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous">
     </script>
-<div class="disclaimer"></div>
+    <div class="disclaimer"></div>
 </body>
 
 </html>
