--- a/nosotras.html
+++ b/nosotras.html
@@ -87,12 +87,13 @@
     <section class="nos_portada">
         <h2>Nosotras</h2>
         <article class="nos_portada_art">
-            <p> <b> RUH </b>nace por nuestra pasion por la <b>NATURALEZA</b>, disfrutamos estar en contacto con ella y
-                activar nuestros sentidos atravez de <b>ESENCIAS</b>.
+            <p> RUH nace por nuestra pasión por la NATURALEZA, disfrutamos estar en contacto con ella.
                 Creemos
                 que
-                es fundamental darnos un espacio para desconectar y re-conectar con la naturaleza y con nosotros mismos,
-                permitiendonos ser y alimentar nuestro crecimiento personal. "Es el poder de conocernos en esencia".</p>
+                es fundamental darnos un espacio para desconectar y re-conectar con nosotros mismos atravez de la
+                naturaleza,
+                permitiendonos ser y alimentar nuestro crecimiento personal.</p>
+            <p>"EL PODER DE CONOCERNOS EN ESENCIA"</p>
             <p> <em> El nombre de nuestra marca significa CRECER en sánscrito, y se define como el lado no material o
                     esencia del ser humano. </em></p>
         </article>
@@ -161,14 +162,13 @@
                         <img src="logos/Face-logo.png" alt="Facebook" class="redes-img"></a>
                 </div>
                 <div class="logo-f">
-                    <img src="logos/logo-footer.png" alt="logo">
-                    <p class="logo-tit-f">Ruh - Esencia</p>
+                    <p class="logo-tit-f">| Ruh - Esencia |</p>
                 </div>
             </section>
 
             <section class="foot_contacto">
                 <div class="foot_contacto_tit">Contactanos</div>
-                <div>
+                <div class="box-contacto">
                     <article class="foot_contacto_iconos">
                         <img src="logos/wa-icono.svg" alt="wa" class="icono">
                         <h5>+54 9 3512297942</h5>
