--- a/productos.html
+++ b/productos.html
@@ -13,7 +13,7 @@
     <meta property="og:title" content="Venta de velas aromaticas,sahumos y defumadores">
     <meta property="og:description"
         content="Velas aromaticas 100% cera vegetal, variedad de sahumos y defumadores con distintas esencias, aromas y decoracion">
-   <meta property="og:url" content="https://ruh-esencia.000webhostapp.com/productos.html"> 
+    <meta property="og:url" content="https://ruh-esencia.000webhostapp.com/productos.html">
     <meta property="og:image" content="https://ruh-esencia.000webhostapp.com/img/prod-s-natural.png">
 
     <link rel="shortcut icon" href="logos/favicon.png" type="image/x-icon">
@@ -229,14 +229,13 @@
                         <img src="logos/Face-logo.png" alt="Facebook" class="redes-img"></a>
                 </div>
                 <div class="logo-f">
-                    <img src="logos/logo-footer.png" alt="logo">
-                    <p class="logo-tit-f">Ruh - Esencia</p>
+                    <p class="logo-tit-f">| Ruh - Esencia |</p>
                 </div>
             </section>
 
             <section class="foot_contacto">
                 <div class="foot_contacto_tit">Contactanos</div>
-                <div>
+                <div class="box-contacto">
                     <article class="foot_contacto_iconos">
                         <img src="logos/wa-icono.svg" alt="wa" class="icono">
                         <h5>+54 9 3512297942</h5>
@@ -260,7 +259,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
         integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous">
     </script>
-    <div  class="disclaimer"></div>
+    <div class="disclaimer"></div>
 
 </body>
 
