se agrego enlace en contactos

--- a/nosotras.html
+++ b/nosotras.html
@@ -171,15 +171,15 @@
                 <div class="box-contacto">
                     <article class="foot_contacto_iconos">
                         <img src="logos/wa-icono.svg" alt="wa" class="icono">
-                        <h5>+54 9 3512297942</h5>
+                        <a href="https://api.whatsapp.com/send?phone=0123456789">+54 9 3512297942</a>
                     </article>
                     <article class="foot_contacto_iconos">
                         <img src="logos/mail-icono.svg" alt="Gmail" class="icono">
-                        <h5>ruh.esencia@gmail.com</h5>
+                        <a href="mailto:ruh.esencia@gmail.com">ruh.esencia@gmail.com</a>
                     </article>
                     <article class="foot_contacto_iconos">
                         <img src="logos/ubicacion-icono.svg" alt="Ubicación" class="icono">
-                        <h5>Recta Martinolli 7759</h5>
+                        <a href="https://www.google.com/maps/place/Av.+Recta+Martinolli+7759,+X5147HZA+Córdoba,+Argentina/@-31.347668,-64.268204,15z/data=!4m5!3m4!1s0x94329e9fa656daa5:0x76881781dbca37b8!8m2!3d-31.3476676!4d-64.2682043?hl=es-419">Recta Martinolli 7759</a>
                     </article>
                 </div>
             </section>
